# asha-rulebench-testing

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json  revisions.json
.github/workflows/: certification.yml  ci.yml
baselines/: post-move-certification-8f12dfb.json  pre-move-certification-14d239f.json  verification-claims-14d239f.json
docs/: certification-policy.md  design.md  extraction-evidence.md  failure-routing.md  non-claims.md
governance/: architecture.md  dependency-policy.toml  ownership.toml
scripts/: certify.mjs  check-generated.mjs  check-governance.mjs  check-product-direction.mjs  product-worktree.mjs  run-browser-suite.mjs  run-portable-consumer.mjs  run-semantic.mjs  run-typescript-fixtures.mjs
suites/browser/: capability-manifest.spec.ts  live-rust.exhaustive.spec.ts
suites/compatibility/fixtures/: authored-content-v1.json  authored-content-v2.json  authored-content-v3.json  replay-storage-v1.json  shatterline-foundation-v4.json
suites/rulebench-proof/: Cargo.toml
suites/rulebench-proof/src/: conformance.rs  lib.rs  regression.rs
suites/rulebench-proof/src/codegen/: capability_artifact.rs  mod.rs  scenario_catalog.rs  ts_emit.rs
suites/rulebench-proof/src/codegen/combat_session/: fragments.rs  renderers.rs  scalars.rs
suites/rulebench-proof/src/tests/: content_diagnostics.rs  mod.rs  model_content.rs  resolver_catalog_state.rs  scenario_package.rs  session_commands.rs  session_lifecycle_turns.rs  session_options_automation.rs  session_snapshot.rs  session_status_audit.rs
suites/typescript-fixtures/: project.json  tsconfig.lib.json
suites/typescript-fixtures/src/: index.ts  rulebench-scenario-fixtures.spec.ts  ruleset-authoring.spec.ts  ruleset-authoring.ts
