[workspace]
resolver = "2"
members = ["suites/rulebench-proof"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
rulebench-combat = { git = "https://github.com/FuzzySlipper/asha-rulebench.git", rev = "d6312a85563a8224b04e1ee149f977b7ae5e9ff4", version = "^0.1" }
rulebench-bridge = { git = "https://github.com/FuzzySlipper/asha-rulebench.git", rev = "d6312a85563a8224b04e1ee149f977b7ae5e9ff4", version = "^0.1" }
rulebench-content = { git = "https://github.com/FuzzySlipper/asha-rulebench.git", rev = "d6312a85563a8224b04e1ee149f977b7ae5e9ff4", version = "^0.1" }
rulebench-product-content = { git = "https://github.com/FuzzySlipper/asha-rulebench.git", rev = "d6312a85563a8224b04e1ee149f977b7ae5e9ff4", version = "^0.1" }
rulebench-process-host = { git = "https://github.com/FuzzySlipper/asha-rulebench.git", rev = "d6312a85563a8224b04e1ee149f977b7ae5e9ff4", version = "^0.1" }
rulebench-protocol = { git = "https://github.com/FuzzySlipper/asha-rulebench.git", rev = "d6312a85563a8224b04e1ee149f977b7ae5e9ff4", version = "^0.1" }
rulebench-replay = { git = "https://github.com/FuzzySlipper/asha-rulebench.git", rev = "d6312a85563a8224b04e1ee149f977b7ae5e9ff4", version = "^0.1" }
rpg-core = { git = "https://github.com/FuzzySlipper/asha-rpg.git", rev = "ef463d2d0ea3f708f08605c0e9df42b385645397", version = "^0.1" }
rpg-ir = { git = "https://github.com/FuzzySlipper/asha-rpg.git", rev = "ef463d2d0ea3f708f08605c0e9df42b385645397", version = "^0.1" }
