[package]
name = "rulebench-proof"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Downstream exhaustive Rulebench conformance and certification harness."

[lints]
workspace = true

[dependencies]
rulebench-bridge.workspace = true
rulebench-combat.workspace = true
rulebench-content.workspace = true
rulebench-product-content.workspace = true
rulebench-process-host.workspace = true
rulebench-protocol.workspace = true
rulebench-replay.workspace = true
rpg-core.workspace = true
rpg-ir.workspace = true
serde_json = "1.0"
